@@ -58,11 +58,8 @@ MODULE exx
   COMPLEX(DP), ALLOCATABLE :: exxbuff(:,:,:)
                                          ! temporary buffer for wfc storage
   !
-#if defined(__EXX_ACE)
   LOGICAL :: use_ace=.true.              !  true: Use Lin Lin's ACE method
-#else
-  LOGICAL :: use_ace=.false.             ! false: Use complete Vx
-#endif
+                                         !  set to .false. to disable ACE
   COMPLEX(DP), ALLOCATABLE :: xi(:,:,:)  ! ACE projectors
   INTEGER :: nbndproj
   LOGICAL :: domat
