@@ -59,7 +59,6 @@ Hardware / Compiler:
        _WIN32     Windows 32-bits
 
 New algorithms:
-      __EXX_ACE   Use Adaptively Compressed Exchange for hybrid functionals
       __NON_BLOCKING_SCATTER   Use  non-blocking algorithm for parallel FFTs
       __DOUBLE_BUFFER          Use double buffer algorithm for parallel FFTs
 
