@@ -3,12 +3,14 @@ Incompatible changes in svn version:
   * The new xml format with schema is now the default. Use configure option
     "--disable-xml", or add -D__OLDXML to MANUAL_FLAGS in make.inc, to revert
     to the old xml format
+  * Hybrid functionals: ACE is now the default for scf calculations (it wasn't
+    in 6.1 contrary to what previously stated in this file); it is disabled
+    for TD-DFPT. See variable "use_ace".
 
 New in 6.1 version:
 
   * Hybrid functionals: Band parallelization over pair of bands, contributed
     by Taylor Barnes et al, http://dx.doi.org/10.1016/j.cpc.2017.01.008
-  * Hybrid functionals: ACE is now the default
   * Hybrid functionals with PAW now work
   * Optimized tetrahedron method, contributed by Mitsuaki Kawamura, U. Tokyo
 
